tests/baselines/reference/parserMemberFunctionDeclaration4.errors.txt
==== tests/cases/compiler/parserMemberFunctionDeclaration4.ts (1 errors) ====
    class C {
        export Foo() { }
        ~~~~~~
!!! parserMemberFunctionDeclaration4.ts(2,5): error TS1031: 'export' modifier cannot appear on a class element.
    }